--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-router-v6",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://aabdalghani.github.io/Category-with-Header",
+  "homepage": "http://aabdalghani.github.io/Category-L1",
   "dependencies": {
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
